# vscode-mcp-installer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-ci.yml
examples/: mcp.yml
mcp_installer/: __init__.py  config.py  main.py  registry.py  server.py
tests/: __init__.py  test_batch_resolution.py  test_batch_search.py  test_cli.py  test_config.py  test_config_cli.py  test_main.py  test_registry.py  test_server.py
