[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-installer"
version = "0.1.0"
description = "Verify and check MCP servers installed in VSCode"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "mcp[cli]",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]

[project.scripts]
code-mcp = "mcp_installer.main:cli"

[tool.setuptools]
packages = ["mcp_installer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py313"]
